# dynamic_fabric_laying

./: README.md
project/: CMakeLists.txt  main.cpp
project/Fabric/: Cloth.cpp  Cloth.hpp
project/Object/: Object.cpp  Object.hpp
project/Vec/: Vec3.cpp  Vec3.hpp
project/utils/: animate.py  log.hpp
project/viewer/: ClothViewer.cpp  ClothViewer.hpp  viewer_main.cpp
project/viewer/ui/camera/: CameraSettingsDialog.cpp  CameraSettingsDialog.hpp
project/viewer/ui/simulation/: SimulationSettingsDialog.cpp  SimulationSettingsDialog.hpp
project/viewer/ui/window/: MainWindow.cpp  MainWindow.hpp
